fix: remove 'height' and add 'overflow' to 'fd-page-act'

--- a/src/assets/style/components/foundi/fd-page.scss
+++ b/src/assets/style/components/foundi/fd-page.scss
@@ -58,7 +58,8 @@
 .fd-page-act {
   display: flex;
   align-items: center;
-  height: 32px;
+  // height: 32px;
+  overflow: hidden;
   
   .query-compact {
     .el-form--inline .el-form-item {
